--- a/rich/index.html
+++ b/rich/index.html
@@ -123,7 +123,7 @@
   <div class="card">
     <h1>Rich: Add columns to your CSVs</h1>
     <p class="subtext">
-      Enter an API key (stored locally), upload a CSV, and describe the new columns you'd like to add.
+      Enter an OpenAI API key (stored locally), upload a CSV, and describe the new columns you'd like to add.
       Aside from data sent to OpenAI, none of your uploaded data is stored on the server: this entire
       webpage executes client-side.
     </p>
