--- a/review/index.html
+++ b/review/index.html
@@ -24,8 +24,37 @@
         }
 
         .container {
-            max-width: 720px;
+            max-width: 1100px;
             margin: 0 auto;
+        }
+
+        .two-column {
+            display: flex;
+            gap: 48px;
+            align-items: flex-start;
+        }
+
+        .two-column .left {
+            flex: 0 0 auto;
+            min-width: 0;
+        }
+
+        .two-column .right {
+            flex: 1;
+            min-width: 0;
+        }
+
+        .two-column video {
+            width: 100%;
+            border-radius: 8px;
+            border: 1px solid #e7e5e4;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        }
+
+        @media (max-width: 800px) {
+            .two-column {
+                flex-direction: column;
+            }
         }
 
         header {
@@ -46,7 +75,6 @@
             font-size: 1.1rem;
             color: #57534e;
             font-weight: 400;
-            font-style: italic;
         }
 
         .bookmarklet-section {
@@ -147,10 +175,7 @@
     <div class="container">
         <header>
             <h1>Review</h1>
-            <p class="subtitle">
-                Extract GitHub PR review comments and transform them into markdown,<br>
-                ready to paste into Claude Code.
-            </p>
+            <p class="subtitle">Extract GitHub PR review comments and transform them into markdown, ready to paste into your coding agent.</p>
         </header>
 
         <div class="bookmarklet-section">
@@ -159,14 +184,24 @@
         </div>
 
         <div class="section">
-            <h2>How to use</h2>
-            <ol>
-                <li>Navigate to a GitHub Pull Request</li>
-                <li>Click the <code>Files changed</code> tab</li>
-                <li>Click the Review bookmarklet</li>
-                <li>Copy the comments from the modal</li>
-                <li>Paste into Claude Code</li>
-            </ol>
+            <div class="two-column">
+                <div class="left">
+                    <h2>How to use</h2>
+                    <ol>
+                        <li>Navigate to a GitHub Pull Request</li>
+                        <li>Click the <code>Files changed</code> tab</li>
+                        <li>Click the Review bookmarklet</li>
+                        <li>Copy the comments from the modal</li>
+                        <li>Paste into your coding agent</li>
+                    </ol>
+                </div>
+                <div class="right">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="review.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
         </div>
 
         <div class="section">
@@ -186,10 +221,6 @@ Multi-line comment spanning several lines of code
 ---</code></pre>
         </div>
 
-        <div class="note">
-            <strong>Note:</strong> By default, this extracts only unresolved review comments.
-            To include resolved comments, modify <code>bookmarklet.src.js</code> and rebuild.
-        </div>
     </div>
 </body>
 </html>
