--- a/streaks/index.html
+++ b/streaks/index.html
@@ -536,6 +536,10 @@
             grid-auto-flow: column;
             grid-auto-columns: min-content;
             gap: 3px;
+            overflow-x: auto;
+            overflow-y: hidden;
+            padding-bottom: 8px;
+            -webkit-overflow-scrolling: touch;
         }
 
         /* Cells for daily grid */
