--- a/streaks/index.html
+++ b/streaks/index.html
@@ -535,17 +535,13 @@
             grid-template-rows: repeat(7, 1fr);
             grid-auto-flow: column;
             grid-auto-columns: min-content;
-            gap: 3px;
-            overflow-x: auto;
-            overflow-y: hidden;
-            padding-bottom: 8px;
-            -webkit-overflow-scrolling: touch;
+            gap: 2px;
         }
 
-        /* Cells for daily grid */
+        /* Cells for daily grid - sized to fit ~54 columns in container */
         .streak-grid.daily .streak-cell {
-            width: 11px;
-            height: 11px;
+            width: 8px;
+            height: 8px;
         }
 
         .streak-cell {
@@ -978,12 +974,13 @@
             }
 
             .streak-grid.daily {
-                gap: 2px;
+                gap: 1px;
             }
 
             .streak-grid.daily .streak-cell {
-                width: 9px;
-                height: 9px;
+                width: 4px;
+                height: 4px;
+                border-radius: 1px;
             }
 
             .goal-item .drag-handle {
